--- a/TaskTwo/src/main/resources/application.properties
+++ b/TaskTwo/src/main/resources/application.properties
@@ -3,11 +3,12 @@
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Task2
+spring.datasource.url=jdbc:postgresql://localhost:5432/local
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.properties..hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=9090
+spring.profiles.active=dev
